src/main/java/com/example/authjwtdemo/error/InvalidTokenError.java
package com.example.authjwtdemo.error;public class InvalidTokenError {
}
